Changes added by PRAMOD

--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget1/tables-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget1/tables-widget1.component.html
@@ -9,7 +9,7 @@
       <app-keenicon name="plus" class="fs-3"></app-keenicon>
       Add Rate
     </a>
-    <app-modal #modal [modalConfig]="modalConfig">
+    <app-modal #modal [modalConfig]="modalConfig" (closed)="refreshData()">
       Modal body html
     </app-modal>
   </div>
