--- a/src/app/_metronic/layout/components/header/header-menu/header-menu.component.scss
+++ b/src/app/_metronic/layout/components/header/header-menu/header-menu.component.scss
@@ -2,3 +2,20 @@
   height: inherit;
   width: inherit;
 }
+
+  /* Blinking Animation Styles */
+  .blinking-btn {
+    animation: blink 1s infinite;
+  }
+  @keyframes blink {
+    0% {
+      opacity: 1;
+    }
+    50% {
+      opacity: 0.2;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+  
