--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget3/mixed-widget3.component.html
@@ -334,6 +334,19 @@
             </button>
           </div>
         </ng-template>
+        
+        <div class="row">
+          <div class="col-md-4">
+              <button type="submit" class="btn btn-primary"
+                  (click)="submitByDealerForAdvance()">Submit</button>
+
+                  &nbsp;
+              <button type="submit" class="btn btn-secondary" (click)="closeModal()">Cancel</button>
+
+          </div>&nbsp;&nbsp;
+          <div class="col-md-2">
+          </div>
+      </div>
       </form>
 
     </div>
