--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget4/tables-widget4.component.html
@@ -108,7 +108,7 @@
       <app-keenicon name="plus" class="fs-3"></app-keenicon>
       New Account
     </a>
-    <app-modal3 #modal [modalConfig]="modalConfig">
+    <app-modal3 #modal [modalConfig]="modalConfig" (closed)="refreshData()">
       Modal body html
     </app-modal3>
   </div>
@@ -215,9 +215,9 @@
                     oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
                     type="text" formControlName="bankName" placeholder="Bank Name">
                 </div>
-
               </div>
               <br>
+
               <div class="row">
                 <div class="col-md-1"></div>
                 <div class="col-md-2">
@@ -229,15 +229,15 @@
                     placeholder="Mobile Number">
 
                 </div>
-              </div>
-              <div class="col-md-1"></div>
-              <div class="col-md-2">
-                <label class="labelNewMargin">Account Holder</label>
-              </div>
-              <div class="col-md-3">
-                <input class="form-control"
-                  oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
-                  type="text" formControlName="accountHolderName" placeholder="Acc Holder Name">
+                <div class="col-md-1"></div>
+                <div class="col-md-2">
+                  <label class="labelNewMargin">Account Holder</label>
+                </div>
+                <div class="col-md-3">
+                  <input class="form-control"
+                    oninput="let p=this.selectionStart;this.value=this.value.toUpperCase();this.setSelectionRange(p, p);"
+                    type="text" formControlName="accountHolderName" placeholder="Acc Holder Name">
+                </div>
               </div>
 
               <!-- </div> -->
