--- a/src/app/pages/dealer/credit/view-account/view-account.component.html
+++ b/src/app/pages/dealer/credit/view-account/view-account.component.html
@@ -6,7 +6,7 @@
 <div class="col-sm-3">
     <div class="text-sm-end">
         <label><b> Total outstanding </b> : </label>
-            <b> {{crOutstanding2}} </b>
+            <b> {{crOutstanding2 | number: '1.2-2'}} </b>
     </div>
 </div>
 
@@ -16,6 +16,15 @@
         <span>
             {{(advanceAmt) * (-1) }} CR
         </span>
+    </div>
+</div>
+<div class="col-sm-2"></div>
+<div class="col-sm-3">
+    <div class="text-sm-end">
+        <button type="button" class="btn btn-success btn-rounded mb-2 me-2"
+            routerLink="/credit/addAccount" [routerLinkActive]="['router-link-active']">
+            <i class="mdi mdi-plus mr-1"></i>
+            + Add New Khata </button>
     </div>
 </div>
 </div>
