--- a/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/base-tables/base-tables-widget2/base-tables-widget2.component.html
@@ -33,11 +33,11 @@
 
       <div class="col-auto">
         <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download PDF" placement="bottom"
-          (click)="exportToPDF()"><i class="fas fa-file-pdf"></i></span> <br>
+          (click)="exportToPDF()"><i class="fas fa-file-pdf" style="font-size: 30px"></i></span> <br>
       </div>
       <div class="col-auto">
         <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" placement="bottom"
-          (click)="excelDownload()"><i class="fas fa-file-csv"></i></span> <br>
+          (click)="excelDownload()"><i class="fas fa-file-csv" style="font-size: 30px"></i></span> <br>
       </div>
     </div>
   </form>
