--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget1/lists-widget1.component.html
@@ -247,27 +247,27 @@
               <tr>
                 <td>
                   <input class="form-control" placeholder="HSN/SAC Number" [(ngModel)]="charges.hsnSacNumber"
-                    [ngModelOptions]="{standalone: true}" readonly>
+                    [ngModelOptions]="{standalone: true}" disabled>
                 </td>
 
                 <td>
                   <input type="number" class="form-control" [(ngModel)]="charges.gstAmount"
-                    [ngModelOptions]="{standalone: true}" placeholder="Enter Tax" readonly />
+                    [ngModelOptions]="{standalone: true}" placeholder="Enter Tax" disabled />
                 </td>
 
                 <td>
                   <input type="number" class="form-control" [(ngModel)]="charges.totalWOGSTAmount"
-                    [ngModelOptions]="{standalone: true}" placeholder="GST Amount" readonly />
+                    [ngModelOptions]="{standalone: true}" placeholder="GST Amount" disabled />
                 </td>
 
                 <td>
                   <input type="number" class="form-control" [(ngModel)]="charges.totalAmount"
-                    [ngModelOptions]="{standalone: true}" placeholder="GST Amount" readonly />
+                    [ngModelOptions]="{standalone: true}" placeholder="GST Amount" disabled />
                 </td>
 
                 <td>
                   <input type="text" class="form-control" [(ngModel)]="charges.unitLube"
-                    [ngModelOptions]="{standalone: true}" placeholder="Enter Credit unit" readonly />
+                    [ngModelOptions]="{standalone: true}" placeholder="Enter Credit unit" disabled />
 
                 </td>
                 <td style="text-align: center;">
