--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget2/lists-widget2.component.html
@@ -27,7 +27,7 @@
 
     <div class="col-auto">
       <span style="font-size: 35px;cursor: pointer;" ngbTooltip="Download CSV" (click)="excelDownload()"><i
-          class="fas fa-file-csv"></i></span> <br>
+          class="fas fa-file-csv" style="font-size: 30px"></i></span> <br>
     </div>
 
   </div>
