--- a/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
+++ b/src/app/_metronic/partials/content/widgets/lists/lists-widget4/lists-widget4.component.html
@@ -133,7 +133,7 @@
               <div class="col-md-4">
                 &nbsp;
                 <button class="noprint btn btn-primary btn-sm" style="font-size: medium;"
-                  routerLink="/credit/AddLubeTaxGstSale"> back </button>
+                  routerLink="/credit/AddLubeTaxGstSale"> Back </button>
               </div>
               <div class="col-md-1">
                 &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i
@@ -261,7 +261,7 @@
               <div class="col-md-2"></div>
               <div class="col-md-4">
                 &nbsp; <button class="noprint btn btn-primary btn-sm" style="font-size: medium;"
-                  routerLink="/credit/viewCashBillList"> back </button>
+                  routerLink="/credit/AddLubeTaxGstSale"> Back </button>
               </div>
               <!-- <div class="col-md-1">          
                 &nbsp; <button class="noprint" style="font-size: medium;" onclick="window.print()"> &nbsp;&nbsp;<i class="fa fa-print"
@@ -435,7 +435,7 @@
               <div class="col-md-2"></div>
               <div class="col-md-4">
                 &nbsp; <button class="noprint btn btn-primary" style="font-size: medium;"
-                  routerLink="/admin/fastagList"> back </button>
+                  routerLink="/credit/AddLubeTaxGstSale"> Back </button>
                 <!-- &nbsp; -->
                 <!-- <button printSectionId="sanjay" ngxPrint>print</button>  -->
 
