--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget30/tables-widget30.component.html
@@ -118,7 +118,7 @@
 <div class="card-header border-0 pt-5">
   <h3 class="card-title align-items-start flex-column">
     <div class="row">
-      <div class="col-lg-10">
+      <div class="col-md-8">
 
         <div class="search-box me-2 mb-2 d-inline-block">
           <div class="position-relative">
@@ -129,14 +129,14 @@
         </div>
 
       </div>
-
+      <div class="col-md-2"></div>
       <div class="col-lg-1">
         <span style="font-size: 45px;cursor: pointer;" (click)="allCustomerPDFDownload()" ngbTooltip="Download PDF"
-          placement="bottom"><i class="fas fa-file-pdf"></i></span>
+          placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i></span>
       </div>
       <div class="col-lg-1">
         <span style="font-size: 45px;cursor: pointer;" (click)="allCustomerExcelDownload()" ngbTooltip="Download CSV"
-          placement="bottom"><i class="fas fa-file-csv"></i></span>
+          placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i></span>
       </div>
     </div>
     <!-- <span class="card-label fw-bolder fs-3 mb-1">Rate Overview</span> -->
