--- a/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
+++ b/src/app/_metronic/partials/content/widgets/tables/tables-widget31/tables-widget31.component.html
@@ -150,12 +150,12 @@
 
                         <div class="col-lg-1">
                             <span style="font-size: 25px;cursor: pointer;" (click)="downloadPDF()"
-                                ngbTooltip="Download PDF" placement="bottom"><i class="fas fa-file-pdf"></i>
+                                ngbTooltip="Download PDF" placement="bottom"><i class="fas fa-file-pdf" style="font-size: 30px;"></i>
                             </span>
                         </div>
                         <div class="col-lg-1">
                             <span style="font-size: 25px;cursor: pointer;" (click)="downloadExcel()"
-                                ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv"></i>
+                                ngbTooltip="Download CSV" placement="bottom"><i class="fas fa-file-csv" style="font-size: 30px;"></i>
                             </span>
                         </div>
 
