--- a/src/app/pages/dealer/credit/saved-invoice/saved-invoice.component.html
+++ b/src/app/pages/dealer/credit/saved-invoice/saved-invoice.component.html
@@ -5,7 +5,7 @@
   <!-- <div class="row"> -->
   <br>
   <div>
-    <ul ngbNav #savedInvoice="ngbNav" [activeId]="1" class="nav-tabs nav-tabs-custom nav-justified" style="width: 100%;">
+    <ul ngbNav #savedInvoice="ngbNav" [activeId]="active" class="nav-tabs nav-tabs-custom nav-justified" style="width: 100%;">
       <li [ngbNavItem]="1">
         <a ngbNavLink>
           <span class="d-none d-sm-block" style="font-size: 15px;">ADD STATEMENT </span>
