--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget10/mixed-widget10.component.html
@@ -127,7 +127,7 @@
                 </div>
                 <div class="col-4">
                   <h4>&nbsp;</h4>
-                  <!-- <h6>GST : {{GSTNumber}}</h6> -->
+                  <h6>GST : {{GSTNumber}}</h6>
                   <h6 *ngIf="hsnCode">HSN Code : {{hsnCode}}</h6>
                   <h6>Phone : <span *ngIf="mobileStatus">
                       {{managerMobile}}
