--- a/src/app/_metronic/partials/content/widgets/mixed/mixed-widget12/mixed-widget12.component.html
+++ b/src/app/_metronic/partials/content/widgets/mixed/mixed-widget12/mixed-widget12.component.html
@@ -113,12 +113,12 @@
                 <div class="col-8">
                   <h3><b>{{companyName}}</b></h3>
                   <h5> {{oilCompanyName}} petrol pump</h5>
-                  <!-- <h6> {{address1}} {{address2}} {{city}} <br>{{state}} {{pin}}</h6> -->
+                  <h6> {{address1}} {{address2}} {{city}} <br>{{state}} {{pin}}</h6>
                 </div>
 
                 <div class="col-4">
                   <h4>&nbsp;</h4>
-                  <!-- <h6>GST : {{GSTNumber}}</h6> -->
+                  <h6>GST : {{GSTNumber}}</h6>
                   <h6 *ngIf="hsnCode">HSN Code : {{hsnCode}}</h6>
                   <h6>Phone :
                     {{phone1}}</h6><br>
